macros/tests/ui/query_handler_returns_result.stderr
error[E0308]: mismatched types
  --> tests/ui/query_handler_returns_result.rs:7:5
   |
7  | /     query_handlers!(
8  | |         fn this(value: u32) -> u32 {
9  | |             value
10 | |         }
11 | |     );
   | |     ^
   | |     |
   | |_____expected `Result<_, _>`, found `u32`
   |       expected due to this
   |
   = note: expected enum `Result<_, _>`
              found type `u32`
   = note: this error originates in the macro `query_handlers` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try wrapping the expression in a variant of `Result`
   |
7  ~     gprogram::queries_handlers_wasm::gstd::Ok(query_handlers!(
8  |         fn this(value: u32) -> u32 {
9  |             value
10 |         }
11 ~     ));
   |
7  ~     gprogram::queries_handlers_wasm::gstd::Err(query_handlers!(
8  |         fn this(value: u32) -> u32 {
9  |             value
10 |         }
11 ~     ));
   |

error[E0308]: mismatched types
  --> tests/ui/query_handler_returns_result.rs:7:5
   |
7  | /     query_handlers!(
8  | |         fn this(value: u32) -> u32 {
9  | |             value
10 | |         }
11 | |     );
   | |     ^
   | |     |
   | |_____expected `u32`, found `Result<_, _>`
   |       arguments to this enum variant are incorrect
   |
   = note: expected type `u32`
              found enum `Result<_, _>`
note: tuple variant defined here
  --> tests/ui/query_handler_returns_result.rs:7:5
   |
7  | /     query_handlers!(
8  | |         fn this(value: u32) -> u32 {
9  | |             value
10 | |         }
11 | |     );
   | |_____^
   = note: this error originates in the macro `query_handlers` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `encode` found for enum `gprogram::QueryResponses` in the current scope
  --> tests/ui/query_handler_returns_result.rs:7:5
   |
7  |       query_handlers!(
   |  _____^
8  | |         fn this(value: u32) -> u32 {
9  | |             value
10 | |         }
11 | |     );
   | |     ^
   | |     |
   | |_____method `encode` not found for this enum
   |       method not found in `QueryResponses`
   |
  ::: $CARGO/parity-scale-codec-3.6.5/src/codec.rs
   |
   |       fn encode(&self) -> Vec<u8> {
   |          ------ the method is available for `gprogram::QueryResponses` here
   |
   = help: items from traits can only be used if the trait is in scope
   = note: this error originates in the macro `query_handlers` (in Nightly builds, run with -Z macro-backtrace for more info)
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
7  |     use crate::gprogram::queries_scale_codec::Encode;
   |
